# apready

./: pyproject.toml
apready/: cli.py  files.py  scraper.py
